--- a/Style.css
+++ b/Style.css
@@ -5,7 +5,7 @@
 .main
 {
     width: 100%;
-    background: linear-gradient(to top,rgba(0,0,0,0.5),rgba(0,0,0,0.5)50%), url(Nithi.jpg);
+    background: linear-gradient(to top,rgba(0,0,0,0.5),rgba(0,0,0,0.5)50%), url(https://images.unsplash.com/photo-1529198792282-ca6752042aa2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8YmVhdXRpZnVsJTIwd2F0ZXJ8ZW58MHx8MHx8&w=1000&q=80);
     background-position: center;
     background-size: cover;
     height: 109vh;
