--- a/Style.css
+++ b/Style.css
@@ -7,7 +7,7 @@
     width: 100%;
     background: linear-gradient(to top,rgba(0,0,0,0.5),rgba(0,0,0,0.5)50%), url(Green-Natureal-Desktop-Wallpapers.jpg);
     background-position: center;
-    background-size: cover;
+    background-size: auto;
     height: 109vh;
 }
 .navbar
